Fixed hit box for Russ png, it was previously too large

--- a/russ_clicker/frontend/public_html/game.css
+++ b/russ_clicker/frontend/public_html/game.css
@@ -10,13 +10,13 @@ body {
 }
 
 #russImg {
-    width: 300px;
+    width: 140px;
 }
 
 #plusImg {
     display: none;
     position: absolute;
-    left: 54%;
+    left: 55%;
     width: 50px;
     rotate: 15deg;
 }
